--- a/.github/workflows/update-state.yml
+++ b/.github/workflows/update-state.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - main
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -11,8 +12,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-        - name: Profile Readme Stats
-          uses: teoxoy/profile-readme-stats@v1.2
+    - name: Generate README.md
+      uses: teoxoy/profile-readme-stats@v1
       with:
         token: ${{ secrets.USER_TOKEN }}
     - name: Update README.md
