--- a/.github/workflows/update-state.yml
+++ b/.github/workflows/update-state.yml
@@ -9,6 +9,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    - uses: fregante/setup-git-user@v1
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
