--- a/.github/workflows/update-state.yml
+++ b/.github/workflows/update-state.yml
@@ -6,8 +6,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-    - uses: fregante/setup-git-user@v1
     - uses: actions/checkout@v2
+    - uses: fregante/setup-git-user@v1
       with:
         fetch-depth: 0
     - name: Generate README.md
@@ -15,9 +15,4 @@ jobs:
       with:
         token: ${{ secrets.USER_TOKEN }}
     - name: Update README.md
-      run: |
-        if [[ "$(git status --porcelain)" != "" ]]; then
-        git add .
-        git commit -m "Update README"
-        git push
-        fi
+      run: echo 'End!!!'
