--- a/.github/workflows/update-state.yml
+++ b/.github/workflows/update-state.yml
@@ -1,18 +1,18 @@
+name: Update README
+
 on:
-  push:
   schedule:
-    - cron: '0 */12 * * *' # every 12 hours
+    - cron: '*/30 * * * *'
+  workflow_dispatch:
+
 jobs:
-  publish:
+  build:
     runs-on: ubuntu-latest
+    name: Update this repo's README with recent activity
+
     steps:
-    - uses: actions/checkout@v2
-    - uses: fregante/setup-git-user@v1
-      with:
-        fetch-depth: 0
-    - name: Generate README.md
-      uses: teoxoy/profile-readme-stats@v1
-      with:
-        token: ${{ secrets.profile-readme-states }}
-    - name: Update README.md
-      run: echo 'End!!!'
+      - uses: actions/checkout@v2
+      - uses: jamesgeorge007/github-activity-readme@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: echo 'completed!!!'
