--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "0 18 * * *"  // every 18 hours
+    - cron: '0 12 * * *'  # every 12 hours
   workflow_dispatch:
 
 jobs:
