--- a/.github/workflows/update-state.yml
+++ b/.github/workflows/update-state.yml
@@ -2,7 +2,8 @@ name: Update README
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
+    - cron: '* 6 * * *' # every 6 hour
+  workflow_dispatch:
 
 jobs:
   build:
