--- a/.github/workflows/update-state.yml
+++ b/.github/workflows/update-state.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         if [[ "$(git status --porcelain)" != "" ]]; then
         git config user.name github-actions[bot]
-        git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+        git config user.email "action@github.com"
         git add .
         git commit -m "Update README"
         git push
